removed local installed package files

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/openmc/openmc_data
 license = MIT
-license_file = LICENSE.txt
+license_file = LICENSE
 classifiers =
     Natural Language :: English
     Topic :: Scientific/Engineering
@@ -23,6 +23,12 @@ classifiers =
 project_urls =
     Source = https://github.com/openmc/openmc_data
     Tracker = https://github.com/openmc/openmc_data/issues
+
+[options.entry_points]
+console_scripts =
+        combine_libraries = openmc_data.combine_libraries.py
+        convert_fendl = openmc_data.convert_fendl.py
+        # todo add other python scripts
 
 [options]
 packages = find:
