--- a/.github/workflows/test_urls.yml
+++ b/.github/workflows/test_urls.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install testing dependencies
         run: |
-          pip install pytest
+          pip install .[tests]
           pip install requests
 
       - name: test urls
