attempt to fix Invalid script entry point error

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,8 @@ project_urls =
 
 [options.entry_points]
 console_scripts =
-        combine_libraries = openmc_data.combine_libraries.py
-        convert_fendl = openmc_data.convert_fendl.py
+        combine_libraries = openmc_data.combine_libraries
+        convert_fendl = openmc_data.convert_fendl
         # todo add other python scripts
 
 [options]
