returning to console_scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ project_urls =
 console_scripts =
         combine_libraries = openmc_data.combine_libraries
         convert_fendl = openmc_data.convert_fendl
-        # todo add other python scripts
+        # todo add other python s
 
 [options]
 packages = find:
