--- a/.github/workflows/test_urls.yml
+++ b/.github/workflows/test_urls.yml
@@ -13,7 +13,7 @@ on:
 # cron job runs every day
 
 jobs:
-    build:
+    ping_urls:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v2
