added .utils for relative path

--- a/.github/workflows/test_urls.yml
+++ b/.github/workflows/test_urls.yml
@@ -25,6 +25,17 @@ jobs:
 
       - name: Install testing dependencies
         run: |
+          sudo apt-get install libhdf5-serial-dev
+          git clone --single-branch --branch develop --depth 1 https://github.com/openmc-dev/openmc.git
+          cd openmc
+          mkdir build
+          cd build
+          cmake ..
+          make -j2
+          sudo make -j2 install
+          cd ..
+          pip install .
+          cd ..
           pip install .[tests]
 
       - name: test urls
