--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ project_urls =
 console_scripts =
         # combine_libraries = openmc_data.combine_libraries
         convert_fendl = openmc_data.convert_fendl:main
+        convert_tendl = openmc_data.convert_tendl:main
         # todo add other python s
 
 [options]
