--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ console_scripts =
         # combine_libraries = openmc_data.combine_libraries
         convert_fendl = openmc_data.convert_fendl:main
         convert_tendl = openmc_data.convert_tendl:main
+        convert_jeff32 = openmc_data.convert_jeff32:main
         # todo add other python s
 
 [options]
