--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,22 @@ console_scripts =
         convert_fendl = openmc_data.convert_fendl:main
         convert_tendl = openmc_data.convert_tendl:main
         convert_jeff32 = openmc_data.convert_jeff32:main
-        # todo add other python s
+        convert_fendl = openmc_data.convert_fendl:main
+        convert_jeff32 = openmc_data.convert_jeff32:main
+        convert_jeff33 = openmc_data.convert_jeff33:main
+        convert_lib80x = openmc_data.convert_lib80x:main
+        convert_mcnp70 = openmc_data.convert_mcnp70:main
+        convert_mcnp71 = openmc_data.convert_mcnp71:main
+        convert_nndc71 = openmc_data.convert_nndc71:main
+        convert_tendl = openmc_data.convert_tendl:main
+        convert_tendl_rand = openmc_data.convert_tendl_rand:main
+        generate_cendl = openmc_data.generate_cendl:main
+        generate_endf = openmc_data.generate_endf:main
+        generate_jeff33 = openmc_data.generate_jeff33:main
+        generate_jendl = openmc_data.generate_jendl:main
+        # make_compton --help commented out as the script needs adapting
+        # make_stopping_powers --help commented out as the script needs adapting
+        sample_sandy = openmc_data.sample_sandy:main
 
 [options]
 packages = find:
