--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ project_urls =
 
 [options.entry_points]
 console_scripts =
-        # combine_libraries = openmc_data.combine_libraries
+        combine_libraries = openmc_data.combine_libraries:main
         convert_fendl = openmc_data.convert_fendl:main
         convert_jeff32 = openmc_data.convert_jeff32:main
         convert_jeff33 = openmc_data.convert_jeff33:main
@@ -40,8 +40,8 @@ console_scripts =
         generate_endf = openmc_data.generate_endf:main
         generate_jeff33 = openmc_data.generate_jeff33:main
         generate_jendl = openmc_data.generate_jendl:main
-        # make_compton --help commented out as the script needs adapting
-        # make_stopping_powers --help commented out as the script needs adapting
+        make_compton = openmc_data.make_compton:main
+        make_stopping_powers = openmc_data.make_stopping_powers:main
         sample_sandy = openmc_data.sample_sandy:main
 
 [options]
