--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ console_scripts =
         make_compton = openmc_data.make_compton:main
         make_stopping_powers = openmc_data.make_stopping_powers:main
         sample_sandy = openmc_data.sample_sandy:main
+        generate_tendl_chain = openmc_data.depletion.generate_tendl_chain:main
 
 [options]
 packages = find:
