--- a/.github/workflows/test_processing.yml
+++ b/.github/workflows/test_processing.yml
@@ -55,7 +55,7 @@ jobs:
         if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_fendl.py')
         run: |
           echo "openmc_data/convert_fendl.py file has been modified."
-          convert_fendl
+          convert_fendl --cleanup
 
       # this running convert_jeff32 in with default arguments produces 49GB of
       # data. Hence the use of arguments to process just one temperature
@@ -63,28 +63,28 @@ jobs:
         if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_jeff32.py')
         run: |
           echo "openmc_data/convert_jeff32.py file has been modified."
-          convert_jeff32 -r 3.2 -t 293
+          convert_jeff32 -r 3.2 -t 293 --cleanup
 
       - name: test default convert_jeff33
         if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_jeff33.py')
         run: |
           echo "openmc_data/convert_jeff33.py file has been modified."
-          convert_jeff33
+          convert_jeff33 -r 3.3 -t 293 --cleanup
 
       - name: test default convert_nndc71
         if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_nndc71.py')
         run: |
           echo "openmc_data/convert_nndc71.py file has been modified."
-          convert_nndc71
+          convert_nndc71 --cleanup
 
       - name: test default convert_tendl
         if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_tendl.py')
         run: |
           echo "openmc_data/convert_tendl.py file has been modified."
-          convert_tendl
+          convert_tendl --cleanup
 
       - name: test default convert_tendl_rand
         if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_tendl_rand.py')
         run: |
           echo "openmc_data/convert_tendl_rand.py file has been modified."
-          convert_tendl_rand
+          convert_tendl_rand --cleanup
