--- a/.github/workflows/test_processing.yml
+++ b/.github/workflows/test_processing.yml
@@ -23,7 +23,7 @@ jobs:
         uses: tj-actions/changed-files@v19
         with:
           files: |
-            openmc_data/convert_*.py
+            openmc_data/convert/convert_*.py
 
       - name: Set up Python
         if: steps.changed-files-specific.outputs.any_changed == 'true'
@@ -54,37 +54,37 @@ jobs:
       - name: test default convert_fendl
         if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_fendl.py')
         run: |
-          echo "openmc_data/convert_fendl.py file has been modified."
+          echo "convert_fendl.py file has been modified."
           convert_fendl --cleanup
 
       # this running convert_jeff32 in with default arguments produces 49GB of
       # data. Hence the use of arguments to process just one temperature
       - name: test default convert_jeff32
-        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_jeff32.py')
+        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert/convert_jeff32.py')
         run: |
-          echo "openmc_data/convert_jeff32.py file has been modified."
+          echo "convert_jeff32.py file has been modified."
           convert_jeff32 -r 3.2 -t 293 --cleanup
 
       - name: test default convert_jeff33
-        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_jeff33.py')
+        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert/convert_jeff33.py')
         run: |
-          echo "openmc_data/convert_jeff33.py file has been modified."
+          echo "convert_jeff33.py file has been modified."
           convert_jeff33 -r 3.3 -t 293 --cleanup
 
       - name: test default convert_nndc71
-        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_nndc71.py')
+        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert/convert_nndc71.py')
         run: |
-          echo "openmc_data/convert_nndc71.py file has been modified."
+          echo "convert_nndc71.py file has been modified."
           convert_nndc71 --cleanup
 
       - name: test default convert_tendl
-        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_tendl.py')
+        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert/convert_tendl.py')
         run: |
-          echo "openmc_data/convert_tendl.py file has been modified."
+          echo "convert_tendl.py file has been modified."
           convert_tendl --cleanup
 
       - name: test default convert_tendl_rand
-        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert_tendl_rand.py')
+        if: contains(steps.changed-files-specific.outputs.modified_files, 'openmc_data/convert/convert_tendl_rand.py')
         run: |
-          echo "openmc_data/convert_tendl_rand.py file has been modified."
+          echo "convert_tendl_rand.py file has been modified."
           convert_tendl_rand --nuclides O16 --cleanup
