--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ console_scripts =
         generate_serpent_fissq = openmc_data.depletion.generate_serpent_fissq:main
         generate_tendl_chain = openmc_data.depletion.generate_tendl_chain:main
         reduce_chain = openmc_data.depletion.reduce_chain:main
+        download_nndc = openmc_data.download.download_nndc:main
 
 [options]
 packages = find:
