--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ project_urls =
 
 [options.entry_points]
 console_scripts =
-        combine_libraries = openmc_data.other.combine_libraries:main
+        # converts scripts
         convert_fendl = openmc_data.convert.convert_fendl:main
         convert_jeff32 = openmc_data.convert.convert_jeff32:main
         convert_jeff33 = openmc_data.convert.convert_jeff33:main
@@ -35,21 +35,26 @@ console_scripts =
         convert_mcnp71 = openmc_data.convert.convert_mcnp71:main
         convert_nndc71 = openmc_data.convert.convert_nndc71:main
         convert_tendl = openmc_data.convert.convert_tendl:main
-        convert_tendl_rand = openmc_data.other.convert_tendl_rand:main
+        # generate scripts
         generate_cendl = openmc_data.generate.generate_cendl:main
         generate_endf = openmc_data.generate.generate_endf:main
         generate_jeff33 = openmc_data.generate.generate_jeff33:main
         generate_jendl = openmc_data.generate.generate_jendl:main
-        make_compton = openmc_data.other.make_compton:main
-        make_stopping_powers = openmc_data.other.make_stopping_powers:main
-        sample_sandy = openmc_data.other.sample_sandy:main
-        add_branching_ratios = openmc_data.depletion.add_branching_ratios:main
         generate_endf71_chain_casl = openmc_data.depletion.generate_endf71_chain_casl:main
         generate_endf71_chain = openmc_data.depletion.generate_endf71_chain:main
         generate_serpent_fissq = openmc_data.depletion.generate_serpent_fissq:main
         generate_tendl_chain = openmc_data.depletion.generate_tendl_chain:main
+        # other scripts
+        convert_tendl_rand = openmc_data.other.convert_tendl_rand:main
+        make_compton = openmc_data.other.make_compton:main
+        make_stopping_powers = openmc_data.other.make_stopping_powers:main
+        add_branching_ratios = openmc_data.depletion.add_branching_ratios:main
+        combine_libraries = openmc_data.other.combine_libraries:main
+        sample_sandy = openmc_data.other.sample_sandy:main
         reduce_chain = openmc_data.depletion.reduce_chain:main
+        # download scripts
         download_nndc = openmc_data.download.download_nndc:main
+        download_nndc_chain = openmc_data.download.download_nndc_chain:main
 
 [options]
 packages = find:
