added existance test for chain downloader

--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -56,9 +56,13 @@ jobs:
           generate_jeff33 --help
           generate_jendl --help
       
-      - name: Test download scripts exist
+      - name: Test download h5 scripts exist
         run: |
           download_nndc --help
+
+      - name: Test download chain files scripts exist
+        run: |
+          download_nndc_chain --help
    
       - name: Test other scripts exist
         run: |
