--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ console_scripts =
         generate_jeff33 = openmc_data.generate.generate_jeff33:main
         generate_jendl = openmc_data.generate.generate_jendl:main
         generate_endf71_chain_casl = openmc_data.depletion.generate_endf71_chain_casl:main
-        generate_endf71_chain = openmc_data.depletion.generate_endf71_chain:main
+        generate_endf_chain = openmc_data.depletion.generate_endf_chain:main
         generate_serpent_fissq = openmc_data.depletion.generate_serpent_fissq:main
         generate_tendl_chain = openmc_data.depletion.generate_tendl_chain:main
         # other scripts
